# SkillBox

./: 2.cpp  3.cpp  4.cpp  main.cpp
10.5/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
11.6/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
11.6/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
11.6/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
11.6/Task4/: Task4.cpp  Task4.sln  Task4.vcxproj
12.5/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
12.5/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
12.5/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
12.5/Task4/: Task4.cpp  Task4.sln  Task4.vcxproj
13.6/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
13.6/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
13.6/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
14.6/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
14.6/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
14.6/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
14.6/Task4/: Task4.cpp  Task4.sln  Task4.vcxproj
14.6/Task5/: Task5.cpp  Task5.sln  Task5.vcxproj
14.6/Task6/: Task6.cpp  Task6.sln  Task6.vcxproj
14.6/Task7/: Task7.cpp  Task7.sln  Task7.vcxproj
14.6/Task8/: Task8.cpp  Task8.sln  Task8.vcxproj
14.6/Task8.2/: Task8.2.sln  Task8.2.vcxproj
15.6/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
15.6/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
15.6/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
15.6/Task4/: Task4.cpp  Task4.sln  Task4.vcxproj
26/CMakeProject1/src/: CMakeLists.txt  CMakeProject1.cpp
Task 4/: 1.cpp
Task1/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  main.cpp
(+1184 files in other folders)
